# heart-disease-identification

./: .gitignore  README.md  pyproject.toml
app/: main.py  model_inspection.py  model_training.py  read_write.py
data/processed/: x_test.pq  x_train.pq  y_test.csv  y_train.csv
data/raw/: heart_disease.pq
models/: heart_disease_model.pkl  heart_disease_study.pkl  y_pred.csv  y_prob.csv  y_true.csv
