[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["arthurmpires <arthur.martinez.pires@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
seaborn = "^0.13.2"
dataframe-image = "^0.2.3"
optuna = "^3.5.0"
pyarrow = "^15.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
